# cpr-kg-mcp

./: .env.example  .gitignore  Dockerfile  INTERNAL_COPY_of_1_0_climate_policy_radar_knowledge_graph_tutorial_CCAI_Neurips_2025.ipynb  README.md  SPEC.md  check_schema.py  docker-compose.yml  fastmcp.txt  main.py  pyproject.toml  test_download.py  test_mcp_server.py  test_null_handling.py  test_search.py  test_search_return.py
server/: analytics.py  batch_debug.py  concepts.py  data_access.py  enhanced_search.py  schemas.py  search.py  server.py
tests/: test_server.py
